# item-waterway-solver

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASE_NOTES.md
src/: lib.rs  litematic.rs  main.rs  verify.rs
tools/: prepare-vanilla-probe-root.sh  run-vanilla-probe.sh  run-vanilla-reload-probe.sh
tools/probes/: armor-stand-powder-snow-two-step.txt  campfire-living-step.txt  fire-item-step.txt  honey-item-slide-step.txt  hopper-downward-probe.txt  hopper-upward-probe.txt  item-bamboo-horizontal-collision-two-step.txt  item-bubble-column-internal-step.txt  item-bubble-column-surface-step.txt  item-cobweb-stuck-two-step.txt  item-flat-rail-landing-step.txt  item-flat-rail-landing-two-step.txt  item-powder-snow-stuck-two-step.txt  item-slime-bounce-step.txt  lava-item-step.txt  living-air-step.txt  living-full-lava-passive-step.txt  living-ladder-horizontal-collision-step.txt  living-ladder-passive-step.txt  living-lava-diagonal-wall-jumpout-step.txt  living-magma-step.txt  living-no-gravity-air-step.txt  living-pointed-dripstone-fall-step.txt  living-scaffolding-passive-step.txt  living-shallow-lava-passive-step.txt  living-shallow-water-horizontal-collision-step.txt  living-trapdoor-ladder-passive-step.txt  living-water-diagonal-jumpout-step.txt  living-water-diagonal-wall-jumpout-step.txt  living-water-horizontal-collision-step.txt  living-water-passive-step.txt  living-water-step.txt  reload-big-dripleaf-chain-observe.txt  reload-big-dripleaf-chain-setup.txt  reload-big-dripleaf-stem-observe.txt  reload-big-dripleaf-stem-setup.txt  reload-cactus-observe.txt  (+3 more)
