[package]
name = "item-waterway-solver"
version = "0.1.0"
edition = "2024"
description = "Rust search tool for slime-piston-launched Minecraft 1.17.1 item waterways"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
mc_schem = "1.1.2"
fastnbt = "2.6.1"
uuid = "1.18.1"
rayon = "1.10"
